syntax = "proto3";
package utils.time;

import "cherry/protobuf/utils/patch/go.proto";

option go_package = "github.com/hopeio/cherry/protobuf/time;time";
option java_package = "xyz.hoper.protobuf.utils.time";


message TimeStamp {
    int64 t = 1;
}

message Model{
    string createdAt = 1 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
    string updateAt = 2 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
    string deletedAt = 3 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
}